--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <!-- Button trigger modal -->
                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#about">
                   <img src="images/country_icon.png" alt="" width="600" height="600">
-                  <h3 class="center">Russia</h3>
+                  <h3 class="center">Russia</h3><!--knwon error-->
                 </button>
 
                 <!-- Modal -->
@@ -35,7 +35,7 @@
                     <div class="modal-content">
                       <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <h4 class="modal-title" id="myModalLabel">Russian Flag</h4>
+                        <h4 class="modal-title" id="myModalLabel">Russian Flag</h4><!--knwon error-->
                       </div>
                       <div class="modal-body">
                         <canvas class="flag_pos" id="russia">
@@ -49,7 +49,7 @@
                 <!-- Button trigger modal -->
                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#experience">
                   <img src="images/country_icon.png" alt="" width="600" height="600">
-                  <h3 class="center">Ireland</h3>
+                  <h3 class="center">Ireland</h3><!--knwon error-->
                 </button>
 
                 <!-- Modal -->
@@ -58,7 +58,7 @@
                     <div class="modal-content">
                       <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <h4 class="modal-title" id="myModalLabel">Irish Flag</h4>
+                        <h4 class="modal-title" id="myModalLabel">Irish Flag</h4><!--knwon error-->
                       </div>
                       <div class="modal-body">
                         <canvas class="flag_pos" id="ireland">
@@ -72,7 +72,7 @@
                 <!-- Button trigger modal -->
                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#education">
                   <img src="images/country_icon.png" alt="" width="600" height="600">
-                  <h3 class="center">Germany</h3>
+                  <h3 class="center">Germany</h3><!--knwon error-->
                 </button>
 
                 <!-- Modal -->
@@ -81,7 +81,7 @@
                     <div class="modal-content">
                       <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <h4 class="modal-title" id="myModalLabel">German Flag</h4>
+                        <h4 class="modal-title" id="myModalLabel">German Flag</h4><!--knwon error-->
                       </div>
                       <div class="modal-body">
                         <canvas class="flag_pos" id="germany">
@@ -117,7 +117,7 @@
                 <!-- Button trigger modal -->
                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#contact">
                   <img src="images/country_icon.png" alt="" width="600" height="600">
-                  <h3 class="center">Italy</h3>
+                  <h3 class="center">Italy</h3><!--knwon error-->
                 </button>
 
                 <!-- Modal -->
@@ -126,7 +126,7 @@
                     <div class="modal-content">
                       <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <h4 class="modal-title" id="myModalLabel">Italian Flag</h4>
+                        <h4 class="modal-title" id="myModalLabel">Italian Flag</h4><!--knwon error-->
                       </div>
                       <div class="modal-body">
                         <canvas class="flag_pos" id="italy">
@@ -140,7 +140,7 @@
                 <!-- Button trigger modal -->
                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#fifth_flag">
                   <img src="images/country_icon.png" alt="" width="600" height="600">
-                  <h3 class="center">France</h3>
+                  <h3 class="center">France</h3><!--knwon error-->
                 </button>
 
                 <!-- Modal -->
@@ -149,7 +149,7 @@
                     <div class="modal-content">
                       <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <h4 class="modal-title" id="myModalLabel">French Flag</h4>
+                        <h4 class="modal-title" id="myModalLabel">French Flag</h4><!--knwon error-->
                       </div>
                       <div class="modal-body">
                         <canvas class="flag_pos" id="france">
@@ -163,7 +163,7 @@
                 <!-- Button trigger modal -->
                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#sixth_button">
                   <img src="images/mail.png" alt="" width="600" height="600">
-                  <h3 class="center">Contact Us</h3>
+                  <h3 class="center">Contact Us</h3><!--knwon error-->
                 </button>
 
                 <!-- Modal -->
@@ -172,7 +172,7 @@
                     <div class="modal-content">
                       <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <h4 class="modal-title" id="myModalLabel">Lets Talk!</h4>
+                        <h4 class="modal-title" id="myModalLabel">Lets Talk!</h4><!--knwon error-->
                       </div>
                       <div class="modal-body">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus nulla animi, distinctio sapiente, porro eos perspiciatis consequuntur id error facere voluptatum officiis in, vitae corrupti voluptate veniam aspernatur, corporis delectus.</p>
